--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "pages:dev": "npx @cloudflare/next-on-pages --watch"
   },
   "dependencies": {
+    "fabric": "^6.7.1",
     "lucide-react": "^0.543.0",
     "next": "15.5.3",
     "react": "19.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/fabric": "^5.3.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
